[project]
name = "xpe"
version = "0.1.0"
description = "A commandline xpath tool that is easy to use"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dependencies = [
    "lxml>=4.9.0",
    "chardet>=4.0.0",
]

[project.scripts]
xpe = "xpe:run"
xte = "xte:run"

[tool.hatch.build.targets.wheel]
packages = ["xpe.py", "xte.py", "xve.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
