[project]
name = "xpe"
version = "1.2.1"
description = "A commandline xpath tool that is easy to use"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
dependencies = [
    "lxml>=4.9.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
xpe = "xpe:run"
xte = "xte:run"
xve = "xve:run"

[tool.hatch.build.targets.wheel]
packages = ["xpe.py", "xte.py", "xve.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
